# zddoc

./: .gitignore  README.md  example.py  pyproject.toml  setup.cfg
.github/scripts/: generate_architecture.py
.github/workflows/: ai-diagram.yml
docs/: architecture.mmd
test_doc/: a15a2-6pwn0.doc  hnw14-vdw79.doc
tests/: test_core.py
zddoc/: __init__.py  cfbf.py  cli.py  fib.py  piece_table.py  reader.py
