[metadata]
name = zddoc
version = 0.1.0
description = Pure Python reader for Word 97-2003 .doc files
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
include_package_data = True

[options.entry_points]
console_scripts =
    zddoc = zddoc.cli:main
